    API via the new Capsule protocol (see "bsddb.h").  If you use the C API and
    upgrade to Python 2.7 and up, you must update the access code (see
    "bsddb.h"). The Capsule protocol is not supported in Python 3.0, but
    pybsddb 5.0.x doesn't support Python 3.0 anymore.
  * Capsule support was buggy. The string passed in to PyCapsule_New() must
    outlive the capsule.  (Larry Hastings)

4.8.4:
  * When doing the full matrix testing with python >=2.6, we
    activate the deprecation warnings (py3k).
  * Split dependencies in the Replication testsuite.
  * Help the Gargabe Collection freeing resources when the
    replication testsuite is completed.
  * Import warning when used as stdlib "bsddb" instead of
    pybsddb project as "bsddb3", when using python >=2.6 and
    py3k warnings are active.
  * Old regression: dbshelve objects are iterable again. The bug was
    introduced in pybsddb 4.7.2. Added relevant testcases.
  * Patches ported from Python developers:
    * Memory leaks: #7808 - http://bugs.python.org/issue7808 - Florent Xicluna
    * Floating point rounding in testcases:
      #5073 - http://bugs.python.org/issue5073 - Mark Dickinson
    * Orthograpy: #5341 - http://bugs.python.org/issue5341
    * Py3k warnings in Python >=2.6: #7092 - http://bugs.python.org/issue7092
    * Correct path for tests:
      #7269 - http://bugs.python.org/issue7269 - Florent Xicluna
    * Shebang: benjamin.peterson
    * Use new Python 2.7 assert()'s: Florent Xicluna
  * Solve a spurious stdlib warning in python >=2.6 with -3 flags.
  * Remove "DBIncompleteError", for sure this time. There were traces
    in "dbtables", in some tests and in the docs.
  * The DBKeyEmptyError exception raised by the library is not the same
    DBKeyEmptyError available in the lib. So the raised exception was
    uncatchable unless you catch DBError. And you can not identify it.
  * Solved last point, document that DBKeyEmptyError exception derives also