@@ -20,6 +20,9 @@
     pybsddb 5.0.x doesn't support Python 3.0 anymore.
   * Capsule support was buggy. The string passed in to PyCapsule_New() must
     outlive the capsule.  (Larry Hastings)
+  * Solve an "Overflow" warning in the testsuite running under python 2.3.
+  * When doing complete full-matrix test, any warning will be considered
+    an error.
 
 4.8.4:
   * When doing the full matrix testing with python >=2.6, we
